--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body {
     text-align: center;
     font-weight: 400;
 }
-#discription {
+#description {
     width: 600px;
     margin: 40px auto;
 }
