--- a/main.css
+++ b/main.css
@@ -41,6 +41,18 @@ input[type=text] {
     border: 2px solid #ccc;
     margin-bottom: 10px;
 }
+input[type=email] {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 12px 20px;
+    font-size: 1rem;
+    border: 2px solid #ccc;
+    margin-bottom: 10px;
+}
+input[type=email]:focus {
+    border: 1px solid rgb(15, 163, 189) ;
+    outline: none;
+}
 #dropdown2 {
     box-sizing: border-box;
     width: 100%;
